--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,26 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-roboto: var(--font-geist-roboto);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+body {
+  font-family: "Roboto", serif;
 }
+/* 
+@import "bootstrap-icons/font/bootstrap-icons.css";
+
+npm install bootstrap-icons 
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+  --verde01: #37421f;
+}
+
+--color-background: var(--background);
+--color-foreground: var(--foreground);
+--font-sans: var(--font-geist-sans);
+--font-mono: var(--font-geist-mono);
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -22,5 +32,4 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+} */
